add water-swagger
